fix: reduce showcase title on small devices

--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -41,6 +41,10 @@
 
                 font-size: 9rem;
             }
+
+            @media (max-width: 360px) {
+                font-size: 7rem;
+            }
         }
 
         .section__text {
